adding switch logic

--- a/openhab2/etc/services/addons.cfg
+++ b/openhab2/etc/services/addons.cfg
@@ -32,7 +32,8 @@
 binding = airquality,astro,chromecast,exec,http1,mqtt,samsungtv,unifi,xmppclient
 
 # A comma-separated list of UIs to install (e.g. "ui = basic,paper")
-ui = basic,dashboard,habpanel,homebuilder,paper,restdocs 
+ui = basic,dashboard,paper
+#,habpanel,homebuilder,restdocs
 
 # A comma-separated list of persistence services to install (e.g. "persistence = rrd4j,jpa")
 persistence = jdbc-sqlite
